--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "websites_blocker"
-version = "0.8.2"
+version = "2"
 dependencies = [
   "PyQt6==6.6.1",
   "PyQt6-Qt6==6.6.2",
-  "PyQt6-sip==13.6.0",
+  "PyQt6-sip==13.6.0"
 ]
 requires-python = ">=3.10"
 authors = [
